--- a/styles/style.css
+++ b/styles/style.css
@@ -429,7 +429,7 @@ tbody tr:nth-child(even) {
   }
 /*---------------------------------------------*/
 /*Telas pequenas*/
-@media only screen and (max-width:768px){
+@media only screen and (max-width:550px){
     body{
         --font-size:10px;
     }
@@ -446,4 +446,10 @@ tbody tr:nth-child(even) {
         "footer";
     }
 }
-
+@media only screen and (min-width:1920px){
+    #Table{
+        box-sizing: border-box;
+        overflow-y: scroll;
+        max-height: 440px;
+    }
+}
